--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <div class="header-icons">
         <a aria-label="My Linkedin" target="_blank" href="#"><i class="icon fa fa-linkedin-alt" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send email" href={{site.email}}><i class="icon fa fa-envelope"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
