fix on typescript icon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-typescript-original-wordmark colored"></i>
+      <i class="devicon-typescript-original.colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
