--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,27 +4,28 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <i class="devicon-typescript-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
       <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-git-plain colored"></i>
+      <img alt="aws" src="{{ "/assets/img/aws.jpg" | prepend: site.baseurl }}" />
+      <i class="devicon-mocha-plain colored"></i>
+      <img alt="socket.io" src="{{ "/assets/img/socket.jpg" | prepend: site.baseurl }}" />
+      <img alt="swagger" src="{{ "/assets/img/swagger.jpg" | prepend: site.baseurl }}" />
+      <img alt="es6" src="{{ "/assets/img/es6.jpg" | prepend: site.baseurl }}" />
+      <p>Some of the tools that I frequently use</p>
+    </div>
+    <div class="tech">
+      <h2>Techs</h2>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-nodejs-plain-wordmark colored"></i>
+      <i class="devicon-typescript-original colored"></i>
+      <p>Passion for specialized development in backend technologies</p>
+    </div>
+    <div class="tech">
+      <h2>Learning</h2>
+      <i class="devicon-go-plain colored"></i>
+      <i class="devicon-python-plain colored"></i>
+      <img alt="rust" src="{{ "/assets/img/rust.jpg" | prepend: site.baseurl }}" />
+      <img alt="deno" src="{{ "/assets/img/deno.jpg" | prepend: site.baseurl }}" />
+      <p>Constant learner, I am currently interested in low-level languages</p>
     </div>
 </div>
