--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,13 +11,14 @@
       <img alt="socket.io" src="{{ "/assets/img/socket.jpg" | prepend: site.baseurl }}" />
       <img alt="swagger" src="{{ "/assets/img/swagger.jpg" | prepend: site.baseurl }}" />
       <img alt="es6" src="{{ "/assets/img/es6.jpg" | prepend: site.baseurl }}" />
-      <p>Some of the tools that I frequently use</p>
+      <p>What I frequently use</p>
     </div>
     <div class="tech">
       <h2>Techs</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-nodejs-plain-wordmark colored"></i>
       <i class="devicon-typescript-original colored"></i>
+      <img alt="es6" src="{{ "/assets/img/c.jpg" | prepend: site.baseurl }}" />
       <p>Passion for specialized development in backend technologies</p>
     </div>
     <div class="tech">
