--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<link rel="icon" href="{{ "/assets/img/guitar.png" | prepend: site.baseurl }}" type="image/x-icon" />>
 <div id="particles-js">
   <div class="header">
       <h1>
@@ -12,7 +13,7 @@
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
-        <a class="link" href="#projects" data-scroll>Projects</a>
+        <!-- <a class="link" href="#projects" data-scroll>Projects</a> -->
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
