--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<link rel="icon" href="{{ "/assets/img/guitar.png" | prepend: site.baseurl }}" type="image/x-icon" />>
+<link rel="icon" href="{{ "/assets/img/guitar.ico" | prepend: site.baseurl }}" type="image/x-icon" />>
 <div id="particles-js">
   <div class="header">
       <h1>
